# awm

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: main.yaml
awm/: __init__.py  __main__.py  authorization.py  encoder.py  util.py
awm/controllers/: allocations_controller.py  authorization_controller.py  deployments_controller.py  service_controller.py  tools_controller.py  users_controller.py
awm/im/: im.py
awm/models/: __init__.py  allocation.py  allocation_info.py  base_model_.py  credentials.py  credentials_kubernetes.py  credentials_open_stack.py  deployment.py  deployment_info.py  eosc_node_environment.py  eosc_node_environment_offer.py  error.py  page.py  page_of_allocations.py  page_of_deployments.py  page_of_tools.py  success.py  tool.py  tool_info.py  user_info.py
awm/oidc/: client.py  jwt.py
awm/routers/: __init__.py  allocations.py  deployments.py  service.py  tools.py  users.py
awm/test/: __init__.py  test_allocations.py  test_allocations_controller.py  test_deployments.py  test_deployments_controller.py  test_oidc.py  test_service.py  test_service_controller.py  test_tools.py  test_tools_controller.py  test_users.py  test_users_controller.py
awm/utils/: allocation_store.py  allocation_store_db.py  allocation_store_vault.py  db.py  node_registry.py  repository.py
